--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,11 +20,11 @@
 已实现：
 1. 单击字段选择联动
 2. 双击跳转源码位置
+3. 添加static、final字段过滤选框
 
 待实现：
 1. source端只展示可读状态字段，target端之战时可写状态字段
 2. 在方法调用（BeanUtils.copyProperties）代码处快捷键打开窗口
-3. 添加static、final字段过滤选项
 </pre>
     ]]></description>
 
