--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -21,10 +21,8 @@
 1. 单击字段选择联动
 2. 双击跳转源码位置
 3. 添加static、final字段过滤选框
-
-待实现：
-1. source端只展示可读状态字段，target端只展示可写状态字段
-2. 在方法调用（BeanUtils.copyProperties）代码处快捷键打开窗口
+4. 自动隐藏: 只隐藏target端的final字段
+4. 在方法调用（BeanUtils.copyProperties）代码处快捷键打开窗口
 </pre>
     ]]></description>
 
